--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ h6,
 
 .fact-item:hover {
     margin-top: -10px;
-    background: #653f03 !important;
+    background: #f78ff2 !important;
     box-shadow: 0 0 45px rgba(2, 2, 2, 0);
 }
 
